# AgenticBankingSystem

./: .env  .gitignore  README.md  main.py  pyproject.toml
app/: models.py  (+1 more)
backend/: README.md  bank_data.db  bank_data.db-shm  bank_data.db-wal  bank_data_temp.db  bank_data_temp2.db  bank_data_temp3.db  pyproject.toml  requirements.txt
backend/app/: main.py  models.py
backend/app/agents/bank_manager/: agent.py
backend/app/agents/kyc_agents/: human_review_kyc.py  kyc_agent_results.py  mockdata.py  notify_customer.py  upsert_kycrecord.py
backend/app/agents/loan_agents/: human_review.py  income_verification.py  notify_customer.py  planner.py
backend/app/agents/payment_transaction_process_agents/: balance_check_function.py  fraud_check_function.py  notify_customer_functions.py  rejected_function.py  test_transfer_agent.py
backend/app/agents/privacy_policy_agent/: agent.py
backend/app/api/v1/: admin.py  auth.py  kyc.py  loan.py  manager.py  transfer.py  user.py
backend/app/conditions/kyc_process_conditions/: score_conditions.py
backend/app/conditions/payment_transaction_process_condition/: process_transfer.py
backend/app/config/: auth._config.py  privacy_policy_agent_config.py  supervisor_config.py
backend/app/database/: database.py  db_tool.py  engine.py  loan.py  seed_data.py
backend/app/graphs/: kyc_agent_graph.py  loan_agent_graph.py  privacy_agent_graph.py  transfer_graph.py
backend/app/schemas/: bank_manager.py  kyc_agent_schema.py  payment_transaction_process_schema.py
backend/app/utils/: auth.py  deps.py
backend/chroma/: chroma.sqlite3
(+95 files in other folders)
