[project]
name = "agneticbanking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "chromadb>=1.5.0",
    "fastapi>=0.136.1",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-openrouter>=0.1.0",
    "langgraph>=1.0.8",
    "passlib[bcrypt]>=1.7.4",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.1",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.49",
]
